--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
+title: Worldskills 2022 Cybersecurity
+description: Documentation and Tracking Hub for WorldSkills 2022 Cybersecurity Team Silver
 theme: jekyll-theme-hacker
