--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Worldskills 2022 Cybersecurity
-description: Documentation and Tracking Hub for WorldSkills 2022 Cybersecurity Team Silver
+title: WorldSkills 2022 - Cybersecurity
+description: Documentation and Tracking Hub for WorldSkills 2022 Cybersecurity Australia Team "Silver"
 theme: jekyll-theme-hacker
